finalize links slides

--- a/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.html
+++ b/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.html
@@ -397,7 +397,7 @@
 <div class="quarto-title-authors">
 <div class="quarto-title-author">
 <div class="quarto-title-author-name">
-Daniel Roelfs 
+<a href="https://danielroelfs.com">Daniel Roelfs</a> 
 </div>
 </div>
 </div>
@@ -1014,11 +1014,18 @@ Daniel Roelfs
 <section id="resources" class="slide level2" data-preview-link="true">
 <h2>Resources</h2>
 <div class="midlist" style="font-size: 3vmin;">
-<p><strong>Enhancing plots in {ggplot2}</strong>, Me, <em>Imaging Group PhD Seminar</em> (2022), <a href="https://danielroelfs.github.io/slides/2022-11-16-phd-club-seminar/phd-club-seminar_index.html">Slides and resources from the presentation last year</a></p>
 <p><strong>Designing Charts in R</strong>, Cédric Scherer, <em>Masterclass for the Data Visualization Society</em> (2023), <a href="https://z3tt.github.io/ggplot-dvs/slides.html">slides for the presentation</a></p>
 <p><strong>Beyond Bar and Line Graphs: Time for a New Data Presentation Paradigm</strong>, Weissgerber <em>et al.</em>, <em>PLoS Biology</em> (2015), DOI: <a href="https://doi.org/10.1371/journal.pbio.1002128">10.1371/journal.pbio.1002128</a></p>
 <p><strong>The misuse of colour in science communication</strong>, Crameri <em>et al.</em>, <em>Nature Communications</em> (2020), DOI: <a href="https://doi.org/10.1038/s41467-020-19160-7">10.1038/s41467-020-19160-7</a></p>
 <p><strong>More examples of the things showed today</strong>, Me, <em>danielroelfs.com</em>, <a href="https://danielroelfs.com/blog">danielroelfs.com/blog</a></p>
+</div>
+</section>
+<section id="additional-links-from-presentation" class="slide level2" data-preview-link="true">
+<h2>Additional links from presentation</h2>
+<div class="midlist" style="font-size: 3vmin;">
+<p><a href="https://danielroelfs.github.io/slides/2022-11-16-phd-club-seminar/phd-club-seminar_index.html"><strong>Slides and resources from last year’s presentation</strong></a> - Talk I gave last year on enhancing ggplots, includes inspiration, code, and a 5 step guide</p>
+<p><a href="https://taylor.wjakethompson.com"><strong>The {taylor} package</strong></a> - Package with both color palettes, themes, and datasets on Taylor Swift, <a href="https://github.com/wjakethompson/taylor/">GitHub</a></p>
+<p><a href="https://quarto.org/docs/presentations/revealjs/"><strong>Quarto + reveal.js</strong></a> - Quarto, the “Rmarkdown successor” used for creating these slides (<a href="https://github.com/danielroelfs/slides/blob/main/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.qmd">link to the source code</a> for this particular presentation, and <a href="https://github.com/danielroelfs/slides/blob/main/2022-11-16-phd-club-seminar/phd-club-seminar-slides/index.qmd">from last year’s presentation</a>)</p>
 </div>
 <div class="footer footer-default">
 
