add analytics to quarto

--- a/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.html
+++ b/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.html
@@ -385,6 +385,7 @@
       margin-right: 0; 
     }
   </style>
+  <script async="" src="https://analytics-danielroelfs.netlify.app/script.js" data-website-id="9fe732c4-da3b-494b-8229-98bf0a4e550e"></script>
 </head>
 <body class="quarto-light">
   <div class="reveal">
