update analytics link

--- a/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.html
+++ b/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/index.html
@@ -385,7 +385,7 @@
       margin-right: 0; 
     }
   </style>
-  <script async src="https://analytics-danielroelfs.netlify.app/script.js" data-website-id="c5dc13e7-2365-4718-bc11-6da594f9c581"></script>
+  <script defer src="https://web-analytics.danielroelfs.app/script.js" data-website-id="c5dc13e7-2365-4718-bc11-6da594f9c581"></script>
 </head>
 <body class="quarto-light">
   <div class="reveal">
