add trial lecture template

--- a/2024-11-19-phd-defense/phd-defense_index.html
+++ b/2024-11-19-phd-defense/phd-defense_index.html
@@ -32,6 +32,10 @@
         </tr>
     </thead>
     <tbody>
+        <tr class="newtab" data-href="./trial-lecture-slides/index.html">
+            <td><i class="fab fa-js-square"></i></td>
+            <td>Slides for the trial lecture</td>
+        </tr>
         <tr class="newtab" data-href="./disputation-slides/index.html">
             <td><i class="fab fa-js-square"></i></td>
             <td>Slides for the disputation</td>
