--- a/2024-11-19-phd-defense/trial-lecture-slides/index.html
+++ b/2024-11-19-phd-defense/trial-lecture-slides/index.html
@@ -23,23 +23,22 @@
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="lib/css/atom-one-dark.css" />
 
-    <!--<link rel="icon" href="lib/norment/logo/radiant-orange/mark-knockout.svg"/>-->
     <link rel="icon" href="lib/norment/logo/color/mark-outline.svg" />
     <link rel="icon" href="lib/norment/logo/color/mark-outline.png" />
   </head>
   <body>
-    <div class="reveal pattern--geo-grid">
+    <div class="reveal pattern--brains-mono">
       <div class="slides">
         <!-- SLIDE -->
         <section class="title" data-state="hide-controls">
           <div class="grid-wrapper">
             <div class="content">
-              <h1>Genetic patterns of brain functional connectivity in mental health</h1>
+              <h1>_Trial lecture title_</h1>
             </div>
             <div class="credit">
               <hr />
               <div class="name">Daniel Roelfs</div>
-              <div class="role">A quite stressed candidate</div>
+              <div class="role">PhD Candidate</div>
             </div>
           </div>
         </section>
@@ -125,19 +124,18 @@
                 <div class="callout-header">Key take-away</div>
                 <div class="callout-container">
                   Mental health issues, whether directly or indirectly, will affect essentially everyone in society<br />(but young people post-COVID
-                  are especially vulnerable)
+                  are especially f*cked)
                 </div>
               </div>
 
               <div class="fragment" style="padding-top: 1em">
-                So why does this happen? Some commonly identified reasons include:
+                So why does this happen? Some commonly named reasons include:
                 <ul>
                   <li>Societal factors</li>
                   <li class="accent b">Genetics</li>
                   <li class="accent b">Biology</li>
                   <li>Environmental reasons</li>
                   <li>Social factors</li>
-                  <li>...</li>
                 </ul>
               </div>
             </div>
@@ -174,8 +172,8 @@
                 <li class="fragment" data-fragment-index="1">
                   <h3 class="b">UK Biobank</h3>
                   <p>
-                    Includes <em>deep phenotyping</em> of ~500.000 individuals<br />encompassing <span class="b accent">genetics</span>, biological
-                    data, <span class="b accent">psychological</span> data, and <span class="b accent">brain imaging</span>
+                    Includes <em>deep phenotyping</em> of ~500.000 individuals<br />encompassing <span class="b accent">psychological</span> data,
+                    biological data, <span class="b accent">brain imaging</span>, and <span class="b accent">genetics</span>
                   </p>
                   <ul>
                     <li style="padding-bottom: 0">Imaging pipeline</li>
@@ -262,23 +260,6 @@
               <figure class="large-image">
                 <img src="files/methods/methods_gwas_ica.png" class="large-image" style="width: 80%" />
               </figure>
-            </div>
-          </section>
-
-          <!-- SUBSLIDE -->
-          <section>
-            <div class="grid-wrapper">
-              <div class="header">
-                <div class="section">How GWAS works</div>
-              </div>
-
-              <div class="content">
-                <figure>
-                  <img src="files/univariate_gwas_math.png" style="width: 50%" />
-                </figure>
-
-                All common parametric and non-parametric tests are just linear models disguise
-              </div>
             </div>
           </section>
 
@@ -395,40 +376,6 @@
           <section>
             <div class="grid-wrapper">
               <div class="header">
-                <div class="section">How MOSTest works</div>
-              </div>
-
-              <div class="content">
-                <figure style="margin-top: -1em">
-                  <img src="files/mostest_gwas_math.png" style="width: 50%" />
-                </figure>
-
-                <ul>
-                  <li>$\widetilde {\mathbf{R}}$ denotes the phenotype correlation matrix</li>
-                  <li>
-                    ${\mathbf{z}}_{\mathbf{j}}^{\mathbf{T}}\widetilde {\mathbf{R}}^{ - 1}{\mathbf{z}}_{\mathbf{j}}$ defines the MOSTest test statistic
-                  </li>
-                  <li>
-                    Null hypothesis: $\mathbf{z}_\mathbf{j}$ is distributed as a multivariate normal random variable with a mean of 0 and covariance
-                    $\widetilde {\mathbf{R}}$
-                  </li>
-                </ul>
-              </div>
-
-              <div class="footer">
-                <div class="source">
-                  Van der Meer <em>et al.</em>,
-                  <a href="https://doi.org/10.1038/s41467-020-17368-1"><em>Understanding the genetic determinants of the brain with MOSTest</em></a
-                  >, <em>Nat Commun</em> (2020), <a href="https://github.com/precimed/mostest">GitHub - precimed/mostest</a>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <!-- SUBSLIDE -->
-          <section>
-            <div class="grid-wrapper">
-              <div class="header">
                 <div class="logo"></div>
                 <div class="section">What we did</div>
               </div>
@@ -446,43 +393,6 @@
                       >, <em>PLoS Genet</em> (2013), <a href="https://github.com/precimed/pleiofdr">GitHub: precimed/pleiofdr</a>
                     </li>
                   </ol>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <!-- SUBSLIDE -->
-          <section>
-            <div class="grid-wrapper">
-              <div class="header">
-                <div class="section">How Conjunctional FDR works</div>
-              </div>
-
-              <div class="content">
-                <figure style="margin-top: -1em">
-                  <!-- FDR_{(p_1,p_2)} = \pi_0(p_1,p_2)F_{0}(p_1,p_2) / F(p_1,p_2) -->
-                  <img src="files/conjfdr_math.png" style="width: 50%" />
-                </figure>
-
-                <ul>
-                  <li>$p_1$ is the <em>p</em>-value for the first phenotype, $p_2$ for the second</li>
-                  <li>
-                    $\pi_{0}(p_2)$ is the conditional proportion of null SNPs for the first phenotype given that <em>p</em>-values for the second
-                    phenotype are $p_2$ or smaller
-                  </li>
-                </ul>
-              </div>
-
-              <div class="footer">
-                <div class="source">
-                  Andreassen <em>et al.</em>,
-                  <a href="https://doi.org/10.1371/journal.pgen.1003455"
-                    ><em
-                      >Improved detection of common variants associated with schizophrenia and bipolar disorder using pleiotropy-informed conditional
-                      false discovery rate</em
-                    ></a
-                  >, <em>PLoS Genet</em> (2013)<br />
-                  <a href="https://github.com/precimed/pleiofdr">GitHub - precimed/pleiofdr</a>
                 </div>
               </div>
             </div>
