--- a/2024-11-19-phd-defense/disputation-slides/index.html
+++ b/2024-11-19-phd-defense/disputation-slides/index.html
@@ -39,7 +39,7 @@
             <div class="credit">
               <hr />
               <div class="name">Daniel Roelfs</div>
-              <div class="role">A quite stressed candidate</div>
+              <div class="role">PhD candidate</div>
             </div>
           </div>
         </section>
@@ -122,7 +122,7 @@
             </div>
             <div class="content">
               <div class="callout">
-                <div class="callout-header">Key take-away</div>
+                <div class="callout-header">Key takeaway</div>
                 <div class="callout-container">
                   Mental health issues, whether directly or indirectly, will affect essentially everyone in society<br />(but young people post-COVID
                   are especially vulnerable)
@@ -175,13 +175,13 @@
                   <h3 class="b">UK Biobank</h3>
                   <p>
                     Includes <em>deep phenotyping</em> of ~500.000 individuals<br />encompassing <span class="b accent">genetics</span>, biological
-                    data, <span class="b accent">psychological</span> data, and <span class="b accent">brain imaging</span>
+                    data,<br /><span class="b accent">psychological</span> data, and <span class="b accent">brain imaging</span>
                   </p>
                   <ul>
                     <li style="padding-bottom: 0">Imaging pipeline</li>
                     <li>Genetics pipeline + GWAS</li>
                   </ul>
-                  <img src="./files/ukb_logo.svg" width="400" height="400" style="position: absolute; right: 10vmin; top: 16vmin" />
+                  <img src="./files/methods/methods_ukb_empty.png" height="400" style="position: absolute; right: 10vmin; top: 20vmin" />
                 </li>
                 <li class="fragment" data-fragment-index="2">
                   <h3 class="b">Publicly accessible GWAS summary statistics</h3>
@@ -196,7 +196,7 @@
                     width="350"
                     style="position: absolute; right: 15vh; top: 78vh"
                   />
-                  <div style="position: absolute; right: 40vh; top: 84vh; font-size: 1.2em">etc.</div>
+                  <div style="position: absolute; right: 40vh; top: 86vh; font-size: 1.2em">etc.</div>
                 </li>
               </ul>
             </div>
@@ -262,23 +262,6 @@
               <figure class="large-image">
                 <img src="files/methods/methods_gwas_ica.png" class="large-image" style="width: 80%" />
               </figure>
-            </div>
-          </section>
-
-          <!-- SUBSLIDE -->
-          <section>
-            <div class="grid-wrapper">
-              <div class="header">
-                <div class="section">How GWAS works</div>
-              </div>
-
-              <div class="content">
-                <figure>
-                  <img src="files/univariate_gwas_math.png" style="width: 50%" />
-                </figure>
-
-                All common parametric and non-parametric tests are just linear models disguise
-              </div>
             </div>
           </section>
 
@@ -395,40 +378,6 @@
           <section>
             <div class="grid-wrapper">
               <div class="header">
-                <div class="section">How MOSTest works</div>
-              </div>
-
-              <div class="content">
-                <figure style="margin-top: -1em">
-                  <img src="files/mostest_gwas_math.png" style="width: 50%" />
-                </figure>
-
-                <ul>
-                  <li>$\widetilde {\mathbf{R}}$ denotes the phenotype correlation matrix</li>
-                  <li>
-                    ${\mathbf{z}}_{\mathbf{j}}^{\mathbf{T}}\widetilde {\mathbf{R}}^{ - 1}{\mathbf{z}}_{\mathbf{j}}$ defines the MOSTest test statistic
-                  </li>
-                  <li>
-                    Null hypothesis: $\mathbf{z}_\mathbf{j}$ is distributed as a multivariate normal random variable with a mean of 0 and covariance
-                    $\widetilde {\mathbf{R}}$
-                  </li>
-                </ul>
-              </div>
-
-              <div class="footer">
-                <div class="source">
-                  Van der Meer <em>et al.</em>,
-                  <a href="https://doi.org/10.1038/s41467-020-17368-1"><em>Understanding the genetic determinants of the brain with MOSTest</em></a
-                  >, <em>Nat Commun</em> (2020), <a href="https://github.com/precimed/mostest">GitHub - precimed/mostest</a>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <!-- SUBSLIDE -->
-          <section>
-            <div class="grid-wrapper">
-              <div class="header">
                 <div class="logo"></div>
                 <div class="section">What we did</div>
               </div>
@@ -446,43 +395,6 @@
                       >, <em>PLoS Genet</em> (2013), <a href="https://github.com/precimed/pleiofdr">GitHub: precimed/pleiofdr</a>
                     </li>
                   </ol>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <!-- SUBSLIDE -->
-          <section>
-            <div class="grid-wrapper">
-              <div class="header">
-                <div class="section">How Conjunctional FDR works</div>
-              </div>
-
-              <div class="content">
-                <figure style="margin-top: -1em">
-                  <!-- FDR_{(p_1,p_2)} = \pi_0(p_1,p_2)F_{0}(p_1,p_2) / F(p_1,p_2) -->
-                  <img src="files/conjfdr_math.png" style="width: 50%" />
-                </figure>
-
-                <ul>
-                  <li>$p_1$ is the <em>p</em>-value for the first phenotype, $p_2$ for the second</li>
-                  <li>
-                    $\pi_{0}(p_2)$ is the conditional proportion of null SNPs for the first phenotype given that <em>p</em>-values for the second
-                    phenotype are $p_2$ or smaller
-                  </li>
-                </ul>
-              </div>
-
-              <div class="footer">
-                <div class="source">
-                  Andreassen <em>et al.</em>,
-                  <a href="https://doi.org/10.1371/journal.pgen.1003455"
-                    ><em
-                      >Improved detection of common variants associated with schizophrenia and bipolar disorder using pleiotropy-informed conditional
-                      false discovery rate</em
-                    ></a
-                  >, <em>PLoS Genet</em> (2013)<br />
-                  <a href="https://github.com/precimed/pleiofdr">GitHub - precimed/pleiofdr</a>
                 </div>
               </div>
             </div>
@@ -646,11 +558,11 @@
 
             <div class="content" style="padding-top: 1em">
               <div class="callout fragment fade-up" style="width: 67vw">
-                <div class="callout-header">Key take-away</div>
+                <div class="callout-header">Key takeaway</div>
                 <div class="callout-container" style="font-size: 1.5em">Biology doesn't care about diagnostic criteria</div>
               </div>
               <div class="callout fragment fade-up" style="width: 67vw">
-                <div class="callout-header">Key take-away</div>
+                <div class="callout-header">Key takeaway</div>
                 <div class="callout-container" style="font-size: 1.5em">
                   Bundling brain-imaging and genetic data identifies relevant biological processes to mental health
                 </div>
@@ -668,16 +580,16 @@
         </section>
 
         <!-- SLIDE -->
-        <section class="screensaver white" data-state="hide-controls">
+        <section class="screensaver white" data-state="hide-controls" data-visibility="uncounted">
           <div class="card">
             <h1>Appendix</h1>
           </div>
         </section>
 
         <!-- SLIDE -->
-        <section>
+        <section data-visibility="uncounted">
           <!-- SUBSLIDE -->
-          <section>
+          <section data-visibility="uncounted">
             <div class="grid-wrapper">
               <div class="header">
                 <div class="section">Article 1</div>
@@ -689,7 +601,7 @@
             </div>
           </section>
           <!-- SUBSLIDE -->
-          <section>
+          <section data-visibility="uncounted">
             <div class="grid-wrapper">
               <div class="header">
                 <div class="section">Article 1</div>
@@ -702,7 +614,7 @@
           </section>
 
           <!-- SUBSLIDE -->
-          <section>
+          <section data-visibility="uncounted">
             <div class="grid-wrapper">
               <div class="header">
                 <div class="section">Article 1</div>
@@ -716,9 +628,9 @@
         </section>
 
         <!-- SLIDE -->
-        <section>
+        <section data-visibility="uncounted">
           <!-- SUBSLIDE -->
-          <section>
+          <section data-visibility="uncounted">
             <div class="grid-wrapper">
               <div class="header">
                 <div class="section">Article 2</div>
@@ -731,7 +643,7 @@
           </section>
 
           <!-- SUBSLIDE -->
-          <section>
+          <section data-visibility="uncounted">
             <div class="grid-wrapper">
               <div class="header">
                 <div class="section">Article 2</div>
@@ -744,7 +656,7 @@
           </section>
 
           <!-- SUBSLIDE -->
-          <section>
+          <section data-visibility="uncounted">
             <div class="grid-wrapper">
               <div class="header">
                 <div class="section">Article 2</div>
@@ -757,7 +669,7 @@
           </section>
 
           <!-- SUBSLIDE -->
-          <section>
+          <section data-visibility="uncounted">
             <div class="grid-wrapper">
               <div class="header">
                 <div class="section">Article 2</div>
@@ -771,9 +683,9 @@
         </section>
 
         <!-- SLIDE -->
-        <section>
+        <section data-visibility="uncounted">
           <!-- SUBSLIDE -->
-          <section>
+          <section data-visibility="uncounted">
             <div class="grid-wrapper">
               <div class="header">
                 <div class="section">Article 3</div>
@@ -786,7 +698,7 @@
           </section>
 
           <!-- SUBSLIDE -->
-          <section>
+          <section data-visibility="uncounted">
             <div class="grid-wrapper">
               <div class="header">
                 <div class="section">Article 3</div>
@@ -800,14 +712,14 @@
         </section>
 
         <!-- SLIDE -->
-        <section class="screensaver white" data-state="hide-controls">
+        <section class="screensaver white" data-state="hide-controls" data-visibility="uncounted">
           <div class="card">
             <h1>Articles</h1>
           </div>
         </section>
 
         <!-- SLIDE -->
-        <section>
+        <section data-visibility="uncounted">
           <div class="grid-wrapper">
             <div class="header">
               <div class="section">Article 1</div>
@@ -820,7 +732,7 @@
         </section>
 
         <!-- SLIDE -->
-        <section>
+        <section data-visibility="uncounted">
           <div class="grid-wrapper">
             <div class="header">
               <div class="section">Article 2</div>
@@ -833,7 +745,7 @@
         </section>
 
         <!-- SLIDE -->
-        <section>
+        <section data-visibility="uncounted">
           <div class="grid-wrapper">
             <div class="header">
               <div class="section">Article 3</div>
