--- a/2024-11-19-phd-defense/trial-lecture-slides/index.html
+++ b/2024-11-19-phd-defense/trial-lecture-slides/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>Disputation slides</title>
+    <title>Trial lecture slides</title>
 
     <!-- Cooper Hewitt -->
     <link href="https://fonts.cdnfonts.com/css/cooper-hewitt" rel="stylesheet" />
