--- a/2024-11-19-phd-defense/trial-lecture-slides/index.html
+++ b/2024-11-19-phd-defense/trial-lecture-slides/index.html
@@ -74,7 +74,7 @@
             </div>
 
             <div class="content">
-              <figure>
+              <figure style="margin-top: -0.5em">
                 <img src="files/age_of_onset_disorders.png" style="width: 80%" />
               </figure>
             </div>
@@ -201,7 +201,7 @@
             <div class="content vcenter">
               <ul class="no-bullets wide">
                 <li class="fragment" data-fragment-index="1">No standardized imaging protocol</li>
-                <li class="fragment">Different selection/exclusion criteria</li>
+                <li class="fragment">Different selection process and inclusion/exclusion criteria</li>
                 <li class="fragment">Few studies with longitudinal data</li>
                 <li class="fragment">Healthy controls don't necessarily stay healthy</li>
                 <li class="fragment">Scanner changes or upgrades</li>
@@ -318,6 +318,7 @@
               <div class="col vcenter">
                 <ul class="no-bullets wide">
                   <li>Changes in frontotemporal connectivity tracts in children from the PNC sample associated with cognition and psychopathology</li>
+                  <li class="fragment">Alterations in myelination associated with pyschopathology measured already in adolescents</li>
                 </ul>
               </div>
 
@@ -435,7 +436,7 @@
                 </li>
                 <li class="fragment" data-fragment-index="3">
                   <h3>Provides an estimate of heritability (h<sup>2</sup><sub>TWIN</sub>)</h3>
-                  <p>Estimates are typically higher than SNP-based heritability despite small sample sizes</p>
+                  <p>Estimates are typically higher than heritability calulated from population samples</p>
                 </li>
               </ul>
             </div>
@@ -479,7 +480,7 @@
         <section>
           <div class="grid-wrapper">
             <div class="header">
-              <div class="section">Heritability</div>
+              <div class="section">Twin-based heritability</div>
             </div>
 
             <div class="content">
@@ -514,8 +515,8 @@
                 </li>
 
                 <li class="fragment" data-fragment-index="3">
-                  <h3>PRS</h3>
-                  <p>Based on GWAS summary statistics, identifies genetic "risk score" for a trait</p>
+                  <h3>PGS</h3>
+                  <p>Based on GWAS summary statistics, identifies a "polygenic score" for a trait</p>
                 </li>
               </ul>
             </div>
@@ -625,9 +626,9 @@
             </div>
 
             <div class="content">
-              <h3>Polygenic Risk Score</h3>
+              <h3>Polygenic Score</h3>
               <ul class="no-bullets">
-                <li>Calculates a genetic risk score</li>
+                <li>Calculates the genetic predisposition for a trait</li>
               </ul>
               <figure class="fragment" data-fragment-index="1" style="margin-top: 1em">
                 <img src="files/prs_illustration.png" width="100vw" />
@@ -879,6 +880,64 @@
         </section>
 
         <!-- SLIDE -->
+        <section>
+          <div class="grid-wrapper">
+            <div class="header">
+              <div class="section">Imaging-genetics studies</div>
+            </div>
+
+            <div class="two-column">
+              <div class="column">
+                <ul class="no-bullets wide">
+                  <li>
+                    <p>Shared genetic architecture for imaging and genetic traits associated with neurodevelopmental disorders</p>
+                  </li>
+                  <li class="fragment" data-fragment-index="1">
+                    <p>Identification of genes associated with both brain structure and neurodevelopmental disorders</p>
+                  </li>
+                  <li class="fragment" data-fragment-index="2">
+                    <p>Map SNPs identified using GWAS to biologically relevant processes</p>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="column">
+                <img
+                  class="fragment fade-in-then-out"
+                  data-fragment-index="1"
+                  src="./files/imggen_cortical_mostest_figure.png"
+                  height="600"
+                  style="position: absolute; right: 5vw; top: 25vh"
+                />
+                <img
+                  class="fragment"
+                  data-fragment-index="2"
+                  src="./files/imggen_cortical_genes_figure.png"
+                  height="350"
+                  style="position: absolute; right: 2vw; top: 50vh"
+                />
+              </div>
+            </div>
+
+            <div class="footer">
+              <div class="source">
+                <div>
+                  Roelfs <em>et al.</em>,
+                  <a href="https://doi.org/10.1038/s44220-023-00190-1"
+                    ><em>Genetic overlap between multivariate measures of human functional brain connectivity and psychiatric disorders</em></a
+                  >, Nat Mental Health (2024)
+                </div>
+                <div class="fragment" data-fragment-index="1">
+                  Van der Meer <em>et al.</em>,
+                  <a href="https://doi.org/10.1038/s41467-020-17368-1"><em>Understanding the genetic determinants of the brain with MOSTest</em></a
+                  >, Nat Commun (2020)
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- SLIDE -->
         <section class="subsection color--dark-accent2" data-state="hide-controls">
           <div class="grid-wrapper">
             <h1>Conclusions</h1>
@@ -898,6 +957,28 @@
                 <img class="plain" src="files/cartoon_functional_experiments.png" style="width: 90%" />
                 <figcaption style="margin-right: 4em">Illustration by <a href="https://www.infocomics.nl">Tom van Dun</a></figcaption>
               </figure>
+            </div>
+          </div>
+        </section>
+
+        <!-- SLIDE -->
+        <section>
+          <div class="grid-wrapper">
+            <div class="header">
+              <div class="section">Imaging-genetics</div>
+            </div>
+
+            <div class="content vcenter">
+              <ul class="no-bullets wide">
+                <li>
+                  <h3>Genetics and imaging are both relevant for neurodevelopmental research</h3>
+                  <p>Both in healthy state and in psychopathology</p>
+                </li>
+                <li class="fragment" data-fragment-index="1">
+                  <h3>Leveraging multiple modalities can boost signal in either direction</h3>
+                  <p>Aids in the discovery of genetic variants and helps map the genetic findings to imaging features</p>
+                </li>
+              </ul>
             </div>
           </div>
         </section>
